sample/SyntaxError/s01.txt
  File "/home/sano_anju/errlocator/sample/SyntaxError/s01.py", line 3
    fo i in range(1, n + 1):
       ^
SyntaxError: invalid syntax